--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "html": "^1.0.0",
     "moment": "^2.30.1",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.6",
     "uuid": "^13.0.0"
   }
 }
